# dgsp

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs.bak
.github/workflows/: docker.yml  docs.yml  rust.yml
benches/: all_benchmarks.sh  bench_utils.rs  dgsp_cert.rs  dgsp_csr.rs  dgsp_full_in_disk.rs  dgsp_full_in_memory.rs  dgsp_join.rs  dgsp_keygen.rs  dgsp_open.rs  dgsp_revoke.rs  dgsp_sign.rs  dgsp_verify.rs  parse_benchmarks.py
examples/: basic_usage.rs  join_benchmark.rs  sign_benchmark.rs  simple.rs  verify_benchmark.rs
src/: cipher.rs  db.rs  dgsp.rs  error.rs  errors.rs  group.rs  hash.rs  keygen.rs  lib.rs  params.rs  scheme.rs  sha2_offsets.rs  sign.rs  sphincs_plus.rs  sphincs_sel.rs  utils.rs  verify.rs  wots_plus.rs
src/db/: in_disk.rs  in_memory.rs
src/hash/: sha2.rs  shake.rs  shake.rs.bak
src/hash/sha2/: sha2_128.rs  sha2_192_256.rs
src/sphincs_plus/: params_sphincs_128f.rs  params_sphincs_128s.rs  params_sphincs_192f.rs  params_sphincs_192s.rs  params_sphincs_256f.rs  params_sphincs_256s.rs  params_sphincs_sha2_128f.rs  params_sphincs_sha2_128s.rs  params_sphincs_sha2_192f.rs  params_sphincs_sha2_192s.rs  params_sphincs_sha2_256f.rs  params_sphincs_sha2_256s.rs  params_sphincs_shake_128f.rs  params_sphincs_shake_128s.rs  params_sphincs_shake_192f.rs  params_sphincs_shake_192s.rs  params_sphincs_shake_256f.rs  params_sphincs_shake_256s.rs  sha2_offsets.rs  shake_offsets.rs
src/wots_plus/: adrs.rs
tests/: all_features_full_test.sh  dgsp_test.sh  full_test_sphincs_features.sh  integration_tests.rs  sphincs_test.sh  wots_test.sh
